# xcmake

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  xmake.lua
.github/workflows/: xc.yml
include/xc/: mapping.hpp  parameter.hpp  utility.hpp  xcmake.hpp
source/: main.cpp
source/xc/: xcmake.cpp
